kubernetes/spark-master-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: spark-master
spec:
  replicas: 1
  selector:
    matchLabels:
      component: spark-master
  template:
    metadata:
      labels:
        component: spark-master
    spec:
      containers:
        - name: spark-master
          image: data-stone:ricardo
          command: ["/spark-master"]
          ports:
            - containerPort: 7077
            - containerPort: 8080
          resources:
            requests:
              memory: "1Gi"
              cpu: "900m"
            limits:
              memory: "900Mi"
              cpu: "1"
