kubernetes/spark-master-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: spark-master
  namespace: ricardo
spec:
  ports:
    - name: webui
      port: 8080
      targetPort: 8080
    - name: spark
      port: 7077
      targetPort: 7077
    - name: REST_API
      port: 6066
      targetPort: 6066
    - name: random
      port: 7337
      targetPort: 7337
  selector:
    component: spark-master
